--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="cabecalho">
             <nav class="header-menu">
                 <div class="header-menu-img">
-                <img class="logo" src="./assets landing page/Logo.png" alt="Imagem da logo Nexcent"></div>
+                <img class="logo" src="./Logo.png" alt="Imagem da logo Nexcent"></div>
                 <div class="right-menu">
                     <p class="nav-text">Home</p>
                     <p class="nav-text">Features</p>
